--- a/index.html
+++ b/index.html
@@ -1,2 +1,92 @@
-<p>Hello 大家好</p>
-<p>我是傅振阳，这是我的个人网站。 </p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>我的介绍</title>
+        <style>
+            table{
+                border-collapse: collapse;
+            }
+            table,td.th{
+                border: 1px solid blue;
+            }
+            
+                a:link {text-decoration:none};
+                a:hover {color:#FF00FF;}
+        </style>
+            <body>
+                <table width="700" height="500" border="1" background="img/bacg.jpg" align="center">
+                    
+    <caption><h3>个人简历</h3></caption>
+    <tr>
+        <td width="90">姓名</td>
+        <td width="100">傅振阳</td>
+        <td width="89">出生日期</td>
+        <td width="113">2001.06</td>
+        <td width="91">性别</td>
+        <td width="48">男</td>
+        <td width="121" rowspan="4" background="img/qq.jpg"></td>
+    </tr>
+    <tr>
+        <td>学历</td>
+        <td>本科</td>
+        <td>专业</td>
+        <td>软件工程</td>
+        <td>民族</td>
+        <td>汉</td>
+    </tr>
+    <tr>
+        <td>学校</td>
+        <td><a href="http://127.0.0.1:8020/Hbuilder2/index.html" target="_blank"> 宁夏大学</a></td>
+        <td>政治面貌</td>
+        <td>团员</td>
+        <td>联系方式</td>
+        <td>1234567888</td>
+    </tr>
+    <tr>
+        <td>籍贯</td>
+        <td>宁夏银川</td>
+        <td>邮箱</td>
+        <td>2414080461@qq.com</td>
+    </tr>
+    <tr height="100">
+        <td>主修课程</td>
+       <td colspan="6">
+           程序设计与算法语言，计算机调试与维护，离散数学    <br/>
+           面向对象课程设计，虚拟化技术，计算机网络，操作系统，    <br/>
+           数据结构 软件工程 算法与数据挖掘，云计算，编译原理与方法<br/>
+       </td>
+    </tr>
+    <tr>
+        <td>技能证书</td>
+        <td colspan="6">
+            <ul>
+                <li>CET 4</li>
+                <li>计算机二级</li>
+                <li>普通话二甲</li>
+                <li>驾驶证</li>
+            </ul>
+        </td>
+    </tr>
+    <tr>
+        <td>项目经历</td>
+        <td colspan="6"> 
+            <ul>
+                <li>图书管理系统</li>
+                <li>综合测评管理系统</li>
+            </ul>
+    </tr>
+    <tr>
+        <td colspan="7" align="center"><b>自我评价</b></td>
+    </tr>
+    <tr>
+        <td colspan="7" height="200">
+             我在大学期间任职学习委员，工作认真负责，深受同学
+喜爱 ，学习中，踏实学习本专业知识，和小组合作时，负责踏实
+具有强烈的团队合作精神和工作能力。
+        </td>
+    </tr>
+</table>
+        </body>
+    </head>
+</html>
