--- a/index.html
+++ b/index.html
@@ -31,40 +31,37 @@
         <td>学历</td>
         <td>本科</td>
         <td>专业</td>
-        <td>软件工程</td>
+        <td>自动化</td>
         <td>民族</td>
         <td>汉</td>
     </tr>
     <tr>
         <td>学校</td>
-        <td><a href="http://127.0.0.1:8020/Hbuilder2/index.html" target="_blank"> 宁夏大学</a></td>
+        <td><a href="cumt.edu..cn" target="_blank"> 中国矿业大学</a></td>
         <td>政治面貌</td>
         <td>团员</td>
         <td>联系方式</td>
-        <td>1234567888</td>
+        <td>17351359995</td>
     </tr>
     <tr>
         <td>籍贯</td>
-        <td>宁夏银川</td>
+        <td>江苏扬州</td>
         <td>邮箱</td>
-        <td>2414080461@qq.com</td>
+        <td>jssyzsfzy@163.com</td>
     </tr>
     <tr height="100">
         <td>主修课程</td>
        <td colspan="6">
-           程序设计与算法语言，计算机调试与维护，离散数学    <br/>
-           面向对象课程设计，虚拟化技术，计算机网络，操作系统，    <br/>
-           数据结构 软件工程 算法与数据挖掘，云计算，编译原理与方法<br/>
+           数字电子技术 模拟电子技术 现代控制理论           <br/>
+           自动控制原理 机器人学 智能机器人                <br/>
+           图像处理与模式识别 微机原理                    <br/>
        </td>
     </tr>
     <tr>
         <td>技能证书</td>
         <td colspan="6">
             <ul>
-                <li>CET 4</li>
-                <li>计算机二级</li>
-                <li>普通话二甲</li>
-                <li>驾驶证</li>
+                <li>CET 6</li>
             </ul>
         </td>
     </tr>
